--- a/src/components/CardRecipe.css
+++ b/src/components/CardRecipe.css
@@ -1,15 +1,15 @@
-.container-doce-recipes {
+.container-recipes {
   background-color: white;
   width: 350px;
 }
 
-.container-done-recipes-info {
+.container-recipes-info {
   align-items: center;
   display: flex;
   flex-direction: column;
 }
 
-.container-done-recipes-info p {
+.container-recipes-info p {
   font-size: 14px;
   font-weight: 600;
   margin: 0;
