Feature: Style pages favorite-recipes, done-recipes and profile Refactor: created CardFilters and CardRecipesInfos

--- a/src/components/CardRecipe.css
+++ b/src/components/CardRecipe.css
@@ -1,18 +1,24 @@
 .container-recipes {
-  background-color: white;
-  width: 350px;
+  background: white;
+  border: 0.518px solid #b1b1b1;
+  border-radius: 5px;
+  height: 135px;
+  width: 318px;
 }
 
-.container-recipes-info {
+.container-recipe-info {
   align-items: center;
   display: flex;
   flex-direction: column;
+  height: 70%;
+  justify-content: end;
+  width: 126px;
 }
 
-.container-recipes-info p {
-  font-size: 14px;
-  font-weight: 600;
-  margin: 0;
+.container-recipe-icons {
+  align-items: flex-start;
+  display: flex;
+  justify-content: center;
 }
 
 .msg-copy {
@@ -28,13 +34,42 @@
 }
 
 .detail-recipe-image {
-  height: 100px;
-  width: 30%;
+  height: 134.85px;
+  width: 163.35px;
 }
 
 .button-share-icon {
   background-color: transparent;
-  border: transparent;
+  border: none;
   height: 30px;
   width: 30px;
+}
+
+.button-favorite-icon {
+  background-color: transparent;
+  border: none;
+  height: 30px;
+  width: 30px;
+}
+
+.recipe-name {
+  color: #1a1b1c;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 12px;
+}
+
+.recipe-category {
+  color: #797d86;
+  font-size: 9px;
+  font-weight: 300;
+  text-align: center;
+}
+
+.done-date {
+  color: #1a1b1c;
+  font-size: 9px;
+  font-weight: 400;
+  line-height: 9px;
+  text-align: center;
 }
