--- a/src/pages/RecipeDetails.css
+++ b/src/pages/RecipeDetails.css
@@ -8,22 +8,32 @@ body {
   padding: 0;
 }
 
-.container-detail-page {
-  background-color: red;
+.container-ingredients {
+  align-items: center;
+  background: white;
+  border: 0.554px solid #b1b1b1;
+  border-radius: 5.35px;
   display: flex;
   flex-direction: column;
-  width: 360px;
+  overflow-y: auto;
+  width: 335px;
 }
 
-/* .container {
-  height: max-content;
-  padding: 0;
-  width: 100%;
-} */
+.height-ingredient {
+  height: 133px;
+}
+
+.height-instructions {
+  height: 414px;
+}
+
+.subtitle-details {
+  font-size: 20px;
+}
 
 .recipe-photo {
   height: 200px;
-  width: 80%;
+  width: 100%;
 }
 
 .recipe-photo img {
@@ -32,6 +42,18 @@ body {
 }
 
 .btn-start-recipe {
+  background: #fcc436;
+  border: none;
+  border-radius: 5px;
   bottom: 0;
+  color: white;
+  font-size: 14px;
+  font-weight: 700;
+  height: 40px;
+  letter-spacing: 0.03em;
+  line-height: 14px;
   position: fixed;
+  text-align: center;
+  text-transform: uppercase;
+  width: 336px;
 }
