--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,21 @@
-.meals {
+/* .meals {
   align-items: center;
 
   /* background: #0fa36b; */
-  color: #464646;
+
+/* color: #464646;
   display: flex;
   flex-direction: column;
   font-family: sans-serif;
   height: 100vh;
   justify-content: center;
-  width: 100%;
-}
+  width: 100%; */
 
-.rocksGlass {
+
+/* .rocksGlass {
   animation: shake 1s infinite ease;
   max-height: 80vh;
-}
+} */
 
 /*
 #iceLeft {
@@ -30,15 +31,15 @@
 }
 */
 
-.meals > .logo {
+/* .meals > .logo {
   animation: shake 1.5s infinite ease;
   color: aliceblue;
   font-family: Montserrat , sans-serif;
   font-size: 3em;
   font-weight: 900;
-}
+} */
 
-@keyframes shake {
+/* @keyframes shake {
 
   0% {
     transform: rotate(5deg);
@@ -51,9 +52,9 @@
   100% {
     transform: rotate(5deg);
   }
-}
+} */
 
-@keyframes clink {
+/* @keyframes clink {
 
   0% {
     transform: rotate(-10deg);
@@ -66,4 +67,4 @@
   100% {
     transform: rotate(-10deg);
   }
-}
+} */
