--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   height: 15.7rem;
-  position: sticky;
+  position: relative;
   right: 0;
   top: 0;
   width: 100vw;
